--- a/css/style.css
+++ b/css/style.css
@@ -96,3 +96,10 @@ button:hover {
 #successMessage {
   color: green;
 }
+body.login-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
