--- a/css/style.css
+++ b/css/style.css
@@ -71,14 +71,16 @@ h1 {
   margin-bottom: 20px;
 }
 
-form.form-grid {
+.form-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
   margin-bottom: 20px;
-  max-height: 50vh; /* chỉ chiếm nửa màn hình */
+  max-height: 50vh; /* Chỉ hiển thị nửa màn hình */
   overflow-y: auto;
+  align-items: start;
 }
+
 
 textarea {
   resize: vertical;
