--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ body.login-page {
   }
   
   .button-row button {
-    min-width: 70px; /* Chiều rộng vừa đủ chứa chữ "Tìm kiếm" */
+    /*min-width: 70px; /* Chiều rộng vừa đủ chứa chữ "Tìm kiếm" */
     padding: 6px 10px;
     font-size: 14px;
     border: none;
